# eventstreaming

./: .gitignore  LICENSE  README.md  pyproject.toml
src/eventstreaming/: io_event.py  screen_recorder.py  stream.py
src/eventstreaming/websocket/: index.html  index.js  io_event.py  screen_recorder.py  server.py  stream.py  video.py  web_server.py  ws_server.py
tests/: dino.py  ffmpeg.py  record.py  screen.py  test.py  test_mss.py  tk.py  tkk.py
